Estrutura do Resumo de Fechamento
Signed-off-by: Erinaldo Henrique <hencomjesus@hotmail.com>